Refactor: исправил замечания ревью